<resources>
    <string name="app_name">Calculator</string>
    <string name="c">C</string>
    <string name="divide_sign">/</string>
    <string name="product_sign">*</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="minus_sign">-</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="plus_sign">+</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_zero">0</string>
    <string name="point_sign">.</string>
    <string name="equals_sign">=</string>
    <string name="historial">Historial</string>
    <string name="sign">+/-</string>
</resources>
