<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pedrogonzalez.calculadora.MiCalculator">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="170sp"
        android:ellipsize="end"
        android:gravity="right"
        android:textSize="45sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/my_screen"
        android:background="@android:color/white"
        />

    <Button
        android:layout_width="92.5sp"
        android:layout_height="70sp"
        android:id="@+id/my_eraser"
        android:textSize="32sp"
        android:text="@string/c"
        android:layout_below="@id/my_screen"
        android:layout_toRightOf="@+id/my_nine"
        android:layout_toEndOf="@+id/my_nine"
        android:background="@color/colorAccent"
        android:textColor="@color/color_numbers"/>

    <Button
        android:layout_width="92.5sp"
        android:layout_height="70sp"
        android:id="@+id/my_divide"
        android:textSize="32sp"
        android:text="@string/divide_sign"
        android:layout_below="@id/my_eraser"
        android:layout_toRightOf="@+id/my_six"
        android:layout_toEndOf="@+id/my_six"
        android:background="@color/color_my_background"
        android:textColor="@color/colorAccent"/>


    <Button
        android:layout_width="92.5sp"
        android:layout_height="70dp"
        android:id="@+id/my_product"
        android:textSize="32sp"
        android:text="@string/product_sign"
        android:layout_below="@id/my_divide"
        android:layout_toRightOf="@+id/my_three"
        android:layout_toEndOf="@+id/my_three"
        android:background="@color/color_my_background"
        android:textColor="@color/colorAccent"/>

    <Button
        android:layout_width="88.5dp"
        android:layout_height="80dp"
        android:id="@+id/my_seven"
        android:textSize="32sp"
        android:text="@string/number_seven"
        android:layout_below="@+id/my_screen"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="2dp"
        android:background="@color/color_numbers"
        android:textColor="@color/color_my_background"
        />

    <Button
        android:layout_width="88.5sp"
        android:layout_height="80sp"
        android:id="@+id/my_eight"
        android:textSize="32sp"
        android:text="@string/number_eight"
        android:layout_below="@+id/my_screen"
        android:layout_toRightOf="@+id/my_seven"
        android:layout_toEndOf="@+id/my_seven"
        android:background="@color/color_numbers"
        android:textColor="@color/color_my_background"/>

    <Button
        android:layout_width="88.5sp"
        android:layout_height="80sp"
        android:id="@+id/my_nine"
        android:textSize="32sp"
        android:text="@string/number_nine"
        android:layout_below="@+id/my_screen"
        android:layout_toRightOf="@+id/my_eight"
        android:layout_toEndOf="@+id/my_eight"
        android:background="@color/color_numbers"
        android:textColor="@color/color_my_background"/>

    <Button
        android:layout_width="92.5dp"
        android:layout_height="70dp"
        android:id="@+id/my_minus"
        android:textSize="32dp"
        android:text="-"
        android:layout_below="@+id/my_product"
        android:layout_toRightOf="@+id/my_three"
        android:layout_toEndOf="@+id/my_three"
        android:background="@color/color_my_background"
        android:textColor="@color/colorAccent"/>

    <Button
        android:layout_width="88.5dp"
        android:layout_height="80dp"
        android:id="@+id/my_four"
        android:textSize="32dp"
        android:text="4"
        android:layout_below="@+id/my_seven"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="2dp"
        android:background="@color/color_numbers"
        android:textColor="@color/color_my_background"/>

    <Button
        android:layout_width="88.5dp"
        android:layout_height="80dp"
        android:id="@+id/my_five"
        android:textSize="32dp"
        android:text="5"
        android:layout_below="@+id/my_eight"
        android:layout_toRightOf="@+id/my_four"
        android:layout_toEndOf="@+id/my_four"
        android:background="@color/color_numbers"
        android:textColor="@color/color_my_background"/>

    <Button
        android:layout_width="88.5dp"
        android:layout_height="80dp"
        android:id="@+id/my_six"
        android:textSize="32dp"
        android:text="6"
        android:layout_below="@+id/my_nine"
        android:layout_toRightOf="@+id/my_five"
        android:layout_toEndOf="@+id/my_five"
        android:background="@color/color_numbers"
        android:textColor="@color/color_my_background"/>

    <Button
        android:layout_width="92.5dp"
        android:layout_height="111dp"
        android:id="@+id/my_plus"
        android:textSize="32dp"
        android:text="+"
        android:layout_below="@+id/my_minus"
        android:layout_toRightOf="@+id/my_sign"
        android:layout_toEndOf="@+id/my_sign"
        android:background="@color/color_my_background"
        android:textColor="@color/colorAccent"/>

    <Button
        android:layout_width="88.5dp"
        android:layout_height="80dp"
        android:id="@+id/my_one"
        android:textSize="32dp"
        android:text="1"
        android:layout_below="@+id/my_four"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="2dp"
        android:background="@color/color_numbers"
        android:textColor="@color/color_my_background"/>

    <Button
        android:layout_width="88.5dp"
        android:layout_height="80dp"
        android:id="@+id/my_two"
        android:textSize="32dp"
        android:text="2"
        android:layout_below="@+id/my_five"
        android:layout_toRightOf="@+id/my_one"
        android:layout_toEndOf="@+id/my_one"
        android:background="@color/color_numbers"
        android:textColor="@color/color_my_background"/>

    <Button
        android:layout_width="88.5dp"
        android:layout_height="80dp"
        android:id="@+id/my_three"
        android:textSize="32dp"
        android:text="3"
        android:layout_below="@+id/my_six"
        android:layout_toRightOf="@+id/my_two"
        android:layout_toEndOf="@+id/my_two"
        android:background="@color/color_numbers"
        android:textColor="@color/color_my_background"/>

    <Button
        android:layout_width="88.5dp"
        android:layout_height="80dp"
        android:id="@+id/my_zero"
        android:textSize="32dp"
        android:text="0"
        android:layout_below="@+id/my_one"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="2dp"
        android:background="@color/color_numbers"
        android:textColor="@color/color_my_background"/>

    <Button
        android:layout_width="88.5dp"
        android:layout_height="80dp"
        android:id="@+id/my_point"
        android:textSize="32dp"
        android:text="."
        android:layout_below="@+id/my_two"
        android:layout_toRightOf="@+id/my_zero"
        android:layout_toEndOf="@+id/my_zero"
        android:background="@color/color_numbers"
        android:textColor="@color/color_my_background"/>

    <Button
        android:layout_width="88.5dp"
        android:layout_height="80dp"
        android:id="@+id/my_sign"
        android:textSize="32dp"
        android:text="+/-"
        android:layout_below="@+id/my_three"
        android:layout_toRightOf="@+id/my_point"
        android:layout_toEndOf="@+id/my_point"
        android:background="@color/color_numbers"
        android:textColor="@color/color_my_background"/>

    <Button
        android:layout_width="95.5dp"
        android:layout_height="70dp"
        android:id="@+id/my_equals"
        android:textSize="32dp"
        android:text="="
        android:layout_below="@+id/my_sign"
        android:layout_toRightOf="@+id/my_history"
        android:layout_toEndOf="@+id/my_history"
        android:background="@color/color_my_background"
        android:textColor="@color/colorAccent"/>

    <Button
        android:layout_width="177dp"
        android:layout_height="70dp"
        android:id="@+id/my_history"
        android:textSize="18dp"
        android:text="Historial"
        android:layout_below="@+id/my_zero"
        android:layout_alignParentLeft="true"
        android:background="@color/colorHisto"
        android:textColor="@color/color_numbers"
        />

</RelativeLayout>
